# Ai-Based-Mental-Health-Chatbot-With-Emotion-Detection

./: README.md  frontend.py  main.py  pyproject.toml
backend/: __main__.py  ai_agent.py  ai_agent_gemini.py  aiagents.txt  config.py  main.py  tools.py
